src/test/ui/resolve/name-clash-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/name-clash-nullary.rs:12:7
   |
12 |   let None: isize = 42; //~ ERROR mismatched types
   |       ^^^^ expected isize, found enum `std::option::Option`
   |
   = note: expected type `isize`
              found type `std::option::Option<_>`

error: aborting due to previous error

